Add mostrarUm e deletarMany
